完成初步android互相调用

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 ucode/JOUFramework/Library/
 ucode/JOUFramework/Temp/
+ucode/JOUFramework/JOUFramework.CSharp.csproj
+ucode/JOUFramework/JOUFramework.sln
